ajustes de modelagem, caldeira mantendo o nível de água

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-ControleCaldeiraVapor/build.xml
-ControleCaldeiraVapor/manifest.mf
-ControleCaldeiraVapor/test
-ControleCaldeiraVapor/build
-ControleCaldeiraVapor/nbproject/private
-ControleCaldeiraVapor/nbproject/configs
-ControleCaldeiraVapor/nbproject/build-impl.xml
-ControleCaldeiraVapor/nbproject/jfx-impl_backup*
-ControleCaldeiraVapor/nbproject/genfiles.properties
-ControleCaldeiraVapor/nbproject/UPDATED.TXT
-ControleCaldeiraVapor/dist/web-files
-ControleCaldeiraVapor/dist/*.html
-ControleCaldeiraVapor/dist/*.jnlp
+SteamBoilerCtrl/build.xml
+SteamBoilerCtrl/manifest.mf
+SteamBoilerCtrl/test
+SteamBoilerCtrl/build
+SteamBoilerCtrl/nbproject/private
+SteamBoilerCtrl/nbproject/configs
+SteamBoilerCtrl/nbproject/build-impl.xml
+SteamBoilerCtrl/nbproject/jfx-impl_backup*
+SteamBoilerCtrl/nbproject/genfiles.properties
+SteamBoilerCtrl/nbproject/UPDATED.TXT
+SteamBoilerCtrl/dist/README.TXT
+SteamBoilerCtrl/dist/web-files
+SteamBoilerCtrl/dist/*.html
+SteamBoilerCtrl/dist/*.jnlp
 **/*.class
 **/*.log
 **/*.bak
