--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,8 @@ SteamBoilerCtrl/build.xml
 SteamBoilerCtrl/manifest.mf
 SteamBoilerCtrl/test
 SteamBoilerCtrl/build
-SteamBoilerCtrl/nbproject/private
-SteamBoilerCtrl/nbproject/configs
-SteamBoilerCtrl/nbproject/build-impl.xml
-SteamBoilerCtrl/nbproject/jfx-impl_backup*
-SteamBoilerCtrl/nbproject/genfiles.properties
-SteamBoilerCtrl/nbproject/UPDATED.TXT
-SteamBoilerCtrl/dist/README.TXT
-SteamBoilerCtrl/dist/web-files
-SteamBoilerCtrl/dist/*.html
-SteamBoilerCtrl/dist/*.jnlp
+SteamBoilerCtrl/nbproject
+SteamBoilerCtrl/dist
 **/*.class
 **/*.log
 **/*.bak
